--- a/ms-email/src/main/resources/example-application.properties
+++ b/ms-email/src/main/resources/example-application.properties
@@ -1,14 +1,11 @@
 spring.application.name=ms-email
-# DATASOURCE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms_email_db
+spring.datasource.username=
 spring.datasource.password=
-# H2 CLIENT
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 # JPA, SQL
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -24,4 +21,3 @@ spring.rabbitmq.addresses=
 broker.name=user.notification
 broker.queue.name=signup.email
 broker.routing.key.name=signup.email.key
-
